--- a/src/app/public-can-fund/share-idea/share-idea.component.scss
+++ b/src/app/public-can-fund/share-idea/share-idea.component.scss
@@ -1,17 +1,20 @@
 .title-create {
-  padding: 4rem 0;
   .title-create-header {
     font-size: 28px;
-    color: #00a4d2;
+    color: #616161;
   }
   .title-create-sub-header {
     font-size: 16px;
+    text-align: center;
     color: gray;
   }
 }
 
+.main-container {
+  padding: 20px;
+}
+
 .create-container {
-  margin: 0 20rem;
   .sub-container {
     padding-right: 5rem;
   }
